# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import storageRouter from "./storage";
 import resourcesRouter from "./resources";
+import submissionsRouter from "./submissions";
 import authRouter from "./auth";
 import contentRouter from "./content";
 import siteTextRouter from "./site-text";
@@ -12,6 +13,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(storageRouter);
 router.use(resourcesRouter);
+router.use(submissionsRouter);
 router.use(authRouter);
 router.use(contentRouter);
 router.use(siteTextRouter);
